[package]
name = "flow-plugs"
version = "0.1.0"
authors = ["Noah Weninger <nweninge@ualberta.ca>"]

[dependencies]
modular-flow = { path = "../modular-flow" }
flow-synth = { path = "../flow-synth" }
jack = "*"
sdl2 = "*"
rustfft = "*"
palette = "*"
apodize = "*"

[lib]
name = "flow_plugs"
crate-type = ["dylib"]

