[package]
name = "flow-plug-essential"
version = "0.1.0"
authors = ["Noah Weninger <nweninge@ualberta.ca>"]

[dependencies]
modular-flow = { path = "../../modular-flow" }
flow-synth = { path = "../../flow-synth" }
jack = "*"
sdl2 = "*"
rustfft = "*"
palette = "*"
apodize = "*"
serde_derive = "*"
serde = "*"

[lib]
name = "flow_plug_essential"
crate-type = ["dylib"]
