[package]
name = "flow-plug-experimental"
version = "0.1.0"
authors = ["Noah Weninger <nweninge@ualberta.ca>"]

[dependencies]
modular-flow = { path = "../../modular-flow" }
flow-synth = { path = "../../flow-synth" }
flow-plug-essential = { path = "../essential" }
rustfft = "*"

[lib]
name = "flow_plug_experimental"
crate-type = ["dylib"]
